# app-templates

./: README.md
cloudcmd/: package-lock.json  package.json
fastify/: build.ts  main.ts  package-lock.json  package.json
fastify/controllers/: index.test.ts  index.ts
fastify/controllers/api/v1/: hello.test.ts  hello.ts
fastify/ui/: package-lock.json  package.json  vite.config.ts
fastify/ui/src/: App.tsx
golang/: .editorconfig  Makefile  go.mod  go.sum  main.go  main_test.go
p5/: .prettierrc  index.html  package-lock.json  package.json
p5/src/: main.ts  style.css
p5/src/entities/: Background.ts  DateTime.ts  FPSCounter.ts  LoadingSpinner.ts  Triangle.ts
p5/src/screen/: Entity.ts  Screen.ts
p5/src/sketch/: loadingSketch.ts  shapesSketch.ts  timeSketch.ts  triangleSketch.ts
powershell/: .editorconfig  .env  Makefile  Math.Tests.ps1  Math.psm1  main.ps1
powershell/tools/: Configure-Secrets.ps1
python/: .env.example  .gitignore  README.md  pymon.py  pyproject.toml
python/src/my_app/: calculator.py  logger.py  main.py  test_calculator.py  test_main.py
typescript/: main.test.ts  main.ts  package-lock.json  package.json
util-cloudcmd/: package.json
vuejs-client-only/: index.html  package-lock.json  package.json
vuejs-client-only/src/: app-counter.js  index.js
