[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Mihai Ionut Vilcu <ionutvmi@gmail.com>"]
readme = "README.md"
packages = [{include = "my_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
poethepoet = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.pytest.ini_options]
markers = [
    "fast",
    "furious",
]

[tool.poe.tasks]
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
